02-vpc.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: Sample VPC for Kolide on Fargate

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC


# Public Subnets
  RouteTablePub:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-RouteTablePub
  RoutePub:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePub
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetPub0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-SubnetPub0
  RouteTableAssociationPub0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePub
      SubnetId: !Ref SubnetPub0

  SubnetPub1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-SubnetPub1
  RouteTableAssociationPub1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePub
      SubnetId: !Ref SubnetPub1


# NAT Gateways
  NatEIP0:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachement
    Properties:
      Domain: vpc
  NatGateway0:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref SubnetPub0
      AllocationId: !GetAtt NatEIP0.AllocationId

  NatEIP1:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachement
    Properties:
      Domain: vpc
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref SubnetPub1
      AllocationId: !GetAtt NatEIP1.AllocationId


# Private Subnets
  SubnetPriv0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-SubnetPriv0
  RouteTablePriv0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-RouteTablePriv0
  RouteTableAssociationPriv0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePriv0
      SubnetId: !Ref SubnetPriv0
  RoutePriv0:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePriv0
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway0

  SubnetPriv1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-SubnetPriv1
  RouteTablePriv1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Kolide-RouteTablePriv1
  RouteTableAssociationPriv1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePriv1
      SubnetId: !Ref SubnetPriv1
  RoutePriv1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePriv1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1


Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: Kolide-VPC

  SubnetPub0:
    Value: !Ref SubnetPub0
    Export:
      Name: Kolide-SubnetPub0

  SubnetPub1:
    Value: !Ref SubnetPub1
    Export:
      Name: Kolide-SubnetPub1

  SubnetPriv0:
    Value: !Ref SubnetPriv0
    Export:
      Name: Kolide-SubnetPriv0

  SubnetPriv1:
    Value: !Ref SubnetPriv1
    Export:
      Name: Kolide-SubnetPriv1
